[gd_scene load_steps=3 format=3 uid="uid://br188hfsa56ie"]

[ext_resource type="Script" path="res://Scenes/Web_Window/Settings_Controller.gd" id="1_e7a3v"]
[ext_resource type="Texture2D" uid="uid://b2u4f484v1fue" path="res://Sprites/UI/SP_TRADER_BOTON.png" id="2_8a174"]

[node name="Settings_Web" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e7a3v")

[node name="Tabs" type="Panel" parent="."]
layout_mode = 2
anchor_left = 0.018
anchor_top = 0.04
anchor_right = 0.982
anchor_bottom = 0.109
offset_left = 0.127998
offset_top = -0.200001
offset_right = -0.128052
offset_bottom = -0.045002

[node name="VBoxContainer" type="VBoxContainer" parent="Tabs"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 43.0

[node name="VolumeLabel" type="Label" parent="Tabs/VBoxContainer"]
layout_mode = 2
text = "Volumen"

[node name="VolumeSlider" type="HSlider" parent="Tabs/VBoxContainer"]
layout_mode = 2
rounded = true

[node name="TextureRect" type="TextureRect" parent="Tabs/VBoxContainer"]
self_modulate = Color(0.192157, 0.870588, 0.478431, 1)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture = ExtResource("2_8a174")
expand_mode = 2

[node name="Button" type="Button" parent="Tabs/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Pausar"
flat = true

[node name="TextureRect2" type="TextureRect" parent="Tabs/VBoxContainer"]
self_modulate = Color(1, 0.421778, 0.389603, 1)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture = ExtResource("2_8a174")
expand_mode = 2

[node name="Button" type="Button" parent="Tabs/VBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Salir"
flat = true

[node name="PauseMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -500.0
offset_right = 1348.0
offset_bottom = 852.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 778.0
offset_top = 662.0
offset_right = 1048.0
offset_bottom = 693.0
text = "Inhala, exhala, Â¡de vuelta al juego!"

[connection signal="value_changed" from="Tabs/VBoxContainer/VolumeSlider" to="." method="set_volume"]
[connection signal="pressed" from="Tabs/VBoxContainer/TextureRect/Button" to="." method="pause_game"]
[connection signal="pressed" from="Tabs/VBoxContainer/TextureRect2/Button" to="." method="exit_game"]
[connection signal="pressed" from="PauseMenu/Button" to="." method="resume_game"]
